[build-system]
requires = ["setuptools>=61.0", "versioningit"]
build-backend = "setuptools.build_meta"


[project]
name = "qcarchivetesting"
dynamic = ["version"]
authors = [
  { name="Benjamin Pritchard", email="qcarchive@molssi.org" },
]
description = "A distributed compute and database platform for quantum chemistry."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
dependencies = [
    "qcfractal",
    "qcengine<0.70a0",
    "pytest",
    "deepdiff",
]


[project.urls]
"Homepage" = "https://github.com/MolSSI/QCFractal"
"Bug Tracker" = "https://github.com/MolSSI/QCFractal/issues"


[project.entry-points.pytest11]
qcarchive_fixtures = "qcarchivetesting.testing_fixtures"
qcarchive_conftest = "qcarchivetesting.pytest_config"


[tool.setuptools.package-data]
qcarchivetesting = ["*_data/**", "config_files/**"]


[tool.black]
line-length = 120


[tool.versioningit]


[tool.versioningit.vcs]
default-tag = "0.0.99" # useful for CI/shallow clones
