[build-system]
requires = ["setuptools>=61.0", "versioningit"]
build-backend = "setuptools.build_meta"


[project]
name = "qcfractal"
dynamic = ["version"]
authors = [
  { name="Benjamin Pritchard", email="qcarchive@molssi.org" },
]
description = "A distributed compute and database platform for quantum chemistry."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
dependencies = [
    "flask",
    "flask-jwt-extended",
    "flask-cors",
    "waitress",
    "bcrypt",
    "sqlalchemy >=2.0",
    "alembic",
    "psycopg2",
    "qcportal",
]


[project.optional-dependencies]
services = [
    "torsiondrive",
    "qcmanybody",
    "geometric",
]
geoip = [
    "geoip2"
]
snowflake = [
    "qcfractalcompute"
]
s3 = [
    "boto3"
]


[project.urls]
"Homepage" = "https://github.com/MolSSI/QCFractal"
"Bug Tracker" = "https://github.com/MolSSI/QCFractal/issues"


[project.scripts]
qcfractal-server = "qcfractal.qcfractal_server_cli:main"


[tool.setuptools.package-data]
qcfractal = ["alembic.ini", "alembic/script.py.mako"]


[tool.black]
line-length = 120


[tool.versioningit]


[tool.versioningit.vcs]
default-tag = "0.0.99" # useful for CI/shallow clones


[tool.pytest.ini_options]
markers = ["slow"]


[tool.coverage.run]
omit = ["qcfractal/alembic/*"]
