[build-system]
requires = ["setuptools>=61.0", "versioningit"]
build-backend = "setuptools.build_meta"


[project]
name = "qcportal"
dynamic = ["version"]
authors = [
  { name="Benjamin Pritchard", email="qcarchive@molssi.org" },
]
description = "A distributed compute and database platform for quantum chemistry."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
dependencies = [
    "numpy",
    "msgpack",
    "requests",
    "pyyaml",
    "pydantic",
    "zstandard",
    "qcelemental",
    "tabulate",
    "tqdm",
    "pandas",
    "pyjwt",
    "packaging",
]


[project.urls]
"Homepage" = "https://github.com/MolSSI/QCFractal"
"Bug Tracker" = "https://github.com/MolSSI/QCFractal/issues"


[tool.black]
line-length = 120


[tool.versioningit]


[tool.versioningit.vcs]
default-tag = "0.0.99" # useful for CI/shallow clones
