[build-system]
requires = ["setuptools>=78.0", "versioningit"]
build-backend = "setuptools.build_meta"


[project]
name = "qcportal"
dynamic = ["version"]
authors = [
  { name="Benjamin Pritchard", email="qcarchive@molssi.org" },
]
description = "A distributed compute and database platform for quantum chemistry."
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
dependencies = [
    "numpy",
    "msgpack",
    "requests",
    "pyyaml",
    "pydantic>2.10",
    "pydantic-settings",
    "zstandard",
    "apsw>=3.42",
    "qcelemental<0.70a0",
    "pint", # Required for qcelemental. Doesn't install with py3.13. REMOVE EVENTUALLY
    "tabulate",
    "tqdm",
    "pandas",
    "pyjwt>=2.10",
    "packaging",
    "typing_extensions",
    "python-dateutil",
    "pytz",
]


[project.urls]
"Homepage" = "https://github.com/MolSSI/QCFractal"
"Bug Tracker" = "https://github.com/MolSSI/QCFractal/issues"


[tool.black]
line-length = 120


[tool.versioningit]


[tool.versioningit.vcs]
default-tag = "0.0.99" # useful for CI/shallow clones
